--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# intellij
+/.idea
+/*.iml
+
 # Build and Release Folders
 bin/
 bin-debug/
